--- a/frontend/src/css/elements.css
+++ b/frontend/src/css/elements.css
@@ -4,6 +4,8 @@
 @import url("./external/wangeditor.css");
 @import url("./ui/overlay.css");
 @import url("./ui/toasts.css");
+@import url("./ui/header.css");
+@import url("./views/portfolio.css");
 
 a {
     color: var(--col-text-l25);
@@ -62,4 +64,25 @@ button {
 
 *:focus-visible {
     outline: 4px solid #41fff9;
+}
+
+@keyframes expand {
+    0% {
+        transform: scaleX(0);
+    }
+}
+.full-page-divider {
+    width: calc(100% - 60px);
+    height: 2px;
+    margin: 20px 30px;
+    background: var(--tz-upper);
+    animation: expand 1.6s cubic-bezier(0,.39,0,.99);
+    animation-delay: 0.1s;
+    animation-fill-mode: both;
+}
+
+.page-container {
+    max-width: 1400px;
+    width: calc(100vw - 50px);
+    margin: 0px auto;
 }
