--- a/frontend/src/css/base/base.css
+++ b/frontend/src/css/base/base.css
@@ -10,10 +10,6 @@ body {
     color: var(--col-text-l1);
     background-color: var(--col-base);
     min-height: 100vh;
-    max-height: 100vh; /* I HATE TIPPY */
-    /* elaboration: if this isn't set tippy sends the tooltip into purgatory out of the viewport */
-    /* so for whatever fucking absurd reason we have to do this, i love web dev! i love web dev! i */
-    height: 0; /* now it's just getting ridiculous */
     overflow-x: hidden;
 }
 h1 {
@@ -23,6 +19,10 @@ h1 {
     font-variation-settings: 'GRAD' 150, 'XOPQ' 96, 'XTRA' 468, 'YOPQ' 79, 'YTAS' 750, 'YTDE' -203, 'YTFI' 738, 'YTLC' 514, 'YTUC' 712, 'slnt' 0;
 }
 
+
+body:has(.portfolio-overlay-open) {
+    overflow: hidden;
+}
 
 [aria-hidden="true"] { visibility: hidden; }
 
