--- a/frontend/src/css/views/portfolio.css
+++ b/frontend/src/css/views/portfolio.css
@@ -185,12 +185,22 @@ z-index: -1;
 .portfolio-grid {
     display: flex;
     flex-direction: column;
-    transition: all 0.2s ease;
+    transition: all 0.5s ease;
+    opacity: 1;
+    min-height: 400vh;
 }
 .portfolio-grid.hide {
     opacity: 0;
     transform: translateY(50px);
     pointer-events: none;
+}
+
+.portfolio-grid img.lazy {
+    opacity: 0;
+    transition: opacity 0.1s ease;
+}
+.portfolio-grid img.lazy.loaded {
+    opacity: 1 !important;
 }
 
 layout-bigcoverany > * {
@@ -354,4 +364,22 @@ layout-bigcoverany > * {
     margin: 10px auto;
     max-width: 1100px;
     width: calc(100vw - 40px);
+}
+
+layout-singleany > * {
+    margin-top: 15px;
+}
+layout-singleany .covers {
+    display: grid;
+    gap: 15px;
+    grid-template-columns: 1fr 1fr;
+}
+layout-singleany .covers > * {
+    flex: 1;
+    position: relative;
+}
+layout-singleany .covers > * img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
