--- a/frontend/src/css/views/home.css
+++ b/frontend/src/css/views/home.css
@@ -203,7 +203,7 @@
 .portfolio-button .intercect-hover-bg {
     opacity: 0;
     transform: scale(1.3) translateX(500px) translateY(100px) rotate(10deg);
-    filter: blur(400px);
+    filter: blur(40px);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -214,8 +214,7 @@
 
 .portfolio-button:hover .intercect .intercect-hover-bg {
     opacity: 1;
-    transform: scale(1.1);
-    filter: blur(20px);
+    transform: scale(1.3);
 }
 
 
@@ -760,7 +759,16 @@
     color: white;
     font-weight: 300;
 }
-
+@media (max-width: 1600px) {
+    .header-left-bg .slant-inner h1 {
+        font-size: 50px;
+    }
+}
+@media (max-width: 1400px) {
+    .header-left-bg .slant-inner h1 {
+        font-size: 45px;
+    }
+}
 
 
 @media (max-width: 900px) {
