--- a/frontend/src/css/views/portfolio.css
+++ b/frontend/src/css/views/portfolio.css
@@ -15,6 +15,7 @@ layout-onetwothree .left {
 }
 
 layout-onetwothree .left > div {
+    aspect-ratio: 16 / 9;
     width: 100%;
     height: auto;
     flex: 1;
@@ -119,6 +120,7 @@ layout-brandingarea .top, layout-brandingarea .bottom {
 layout-sidebyside > div, layout-brandingarea .image-container {
     flex-basis: max(var(--modifier), 0px);
     flex-grow: calc(var(--ratio));
+    aspect-ratio: var(--ratio);
     position: relative;
     display: block;
     width: 100%;
@@ -144,7 +146,6 @@ layout-sidebyside > div > img, layout-brandingarea img {
     transform: scale(1.0001);
     cursor: pointer;
     outline: 3px solid #0000;
-    width: 100%;
 }
 
 
@@ -186,9 +187,6 @@ z-index: -1;
     transition: all 0.5s ease;
     opacity: 1;
     min-height: 400vh;
-}
-.portfolio-grid > * {
-    
 }
 .portfolio-grid.hide {
     opacity: 0;
