--- a/frontend/src/css/views/portfolio.css
+++ b/frontend/src/css/views/portfolio.css
@@ -212,6 +212,9 @@ layout-bigcoverany > * {
 .image-container img {
     background-image: #fff2;
 }
+.image-container img {
+    width: 100%;
+}
 
 
 .image-container .bar {
